<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="detailOverviewViewModel"
                  type="com.movie.model.view.DetailOverviewViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_transparent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/detail_margin">

        <com.movie.customview.view.CustomScrollView
                android:id="@+id/cs_view"
                android:layout_width="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_margin">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_story"
                            android:textColor="@color/white"
                            android:textSize="@dimen/movie_tile_font"/>

                    <TextView
                            android:id="@+id/tv_overview_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:drawableEnd="@{safeUnbox(detailOverviewViewModel.isVisibleMore) ? @drawable/baseline_keyboard_arrow_up_black : @drawable/baseline_keyboard_arrow_down_black}"
                            android:drawableTint="@color/main_back_drop_holder"
                            android:gravity="center_vertical"
                            android:text="@string/detail_more"
                            android:textColor="@color/main_back_drop_holder"
                            android:textSize="@dimen/detail_overview_credit_all"
                            android:onClickListener="@{() -> safeUnbox(detailOverviewViewModel.isVisibleMore) ? detailOverviewViewModel.setVisibleMore(false) : detailOverviewViewModel.setVisibleMore(true)}"
                    />
                </FrameLayout>

                <TextView
                        android:id="@+id/tv_overview_story"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_btn_top_margin"
                        android:visibility="@{safeUnbox(detailOverviewViewModel.isVisibleMore) ? View.VISIBLE : View.GONE}"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="@{detailOverviewViewModel.overview}"
                        android:textColor="@color/white"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_margin"
                        android:text="@string/detail_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/movie_tile_font"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_btn_top_margin"
                        android:nestedScrollingEnabled="true"
                        app:videoListAdapter="@{detailOverviewViewModel.videoListAdapter}"
                        app:videoListItem="@{detailOverviewViewModel.videoList}"
                />


                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_margin">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_credits"
                            android:textColor="@color/white"
                            android:textSize="@dimen/movie_tile_font"/>

                    <TextView
                            android:id="@+id/tv_credit_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:gravity="center_vertical"
                            android:text="@string/detail_credits_all"
                            android:textColor="@color/main_back_drop_holder"
                            android:textSize="@dimen/detail_overview_credit_all"/>

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_credit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/detail_btn_top_margin"
                        android:nestedScrollingEnabled="true"
                        app:creditListAdapter="@{detailOverviewViewModel.creditListAdapter}"
                        app:creditListItem="@{detailOverviewViewModel.creditResponse}"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_margin"
                        android:text="@string/detail_info"
                        android:textColor="@color/white"
                        android:textSize="@dimen/movie_tile_font"/>

                <include
                        android:id="@+id/v_detail_release_date"
                        layout="@layout/view_detail_info_item"/>

                <include
                        android:id="@+id/v_detail_spoken_languages"
                        layout="@layout/view_detail_info_item"/>

                <include
                        android:id="@+id/v_detail_run_time"
                        layout="@layout/view_detail_info_item"/>

                <include
                        android:id="@+id/v_detail_production_countries"
                        layout="@layout/view_detail_info_item"/>

                <include
                        android:id="@+id/v_detail_production_companies"
                        layout="@layout/view_detail_info_item"/>

            </LinearLayout>

        </com.movie.customview.view.CustomScrollView>
    </LinearLayout>

</layout>
